# ConsoleProject

./: .gitmodules  README.md
Data/: test.txt
Source/: CMakeLists.txt
Source/Game/: CMakeLists.txt
Source/Game/Source/Credit/: Credit.cpp  Credit.h
Source/Game/Source/Neuron/: Neuron.cpp  Neuron.h
Source/Game/Source/Test/: Test.cpp  Test.h
Source/Game/Source/main/: Config.h  Execution.cpp
